добавлена еще страница

--- a/src/app/products/product-form/product-form.html
+++ b/src/app/products/product-form/product-form.html
@@ -61,7 +61,7 @@
       </button>
       <button type="button"
               class="btn-cancel"
-              (click)="router.navigate(['/products'])">
+              (click)="cancel()">
         Cancel
       </button>
     </div>
