--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -1,1 +1,33 @@
-<p>orders works!</p>
+<div class="container">
+  <h2>Заказы</h2>
+
+  <div *ngIf="orders.length === 0" class="no-data">
+    Заказов нет
+  </div>
+
+  <div *ngIf="orders.length > 0" class="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th *ngFor="let column of displayedColumns">{{ column }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let order of orders">
+          <td>{{ order.id }}</td>
+          <td>{{ order.customerId }}</td>
+          <td>{{ order.dateTime | date:'medium' }}</td>
+          <td>{{ order.totalAmount | currency }}</td>
+          <td>{{ order.orderAddress }}</td>
+          <td class="actions">
+            <button (click)="viewOrderDetails(order.id)" class="btn-view">Детали</button>
+            <button (click)="editOrder(order.id)" class="btn-edit">Редактировать</button>
+            <button (click)="deleteOrder(order.id)" class="btn-delete">Удалить</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <button (click)="createNewOrder()" class="btn-add">Создать новый заказ</button>
+</div>
