--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,28 @@
-<header>
-  <nav>
-    <ul>
-      <li><a routerLink="/customers" routerLinkActive="active">Customers</a></li>
-      <li><a routerLink="/orders" routerLinkActive="active">Orders</a></li>
-      <li><a routerLink="/products" routerLinkActive="active">Products</a></li>
+<header class="main-header">
+  <nav class="centered-nav">
+    <ul class="nav-list">
+      <li class="nav-item">
+        <a routerLink="/customers" routerLinkActive="active" class="nav-link">
+          <i class="fas fa-users"></i>
+          <span>Customers</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/orders" routerLinkActive="active" class="nav-link">
+          <i class="fas fa-clipboard-list"></i>
+          <span>Orders</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/products" routerLinkActive="active" class="nav-link">
+          <i class="fas fa-boxes"></i>
+          <span>Products</span>
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
 
-<main>
+<main class="centered-main">
   <router-outlet></router-outlet>
 </main>
